# mregpy

./: .gitignore  .mregignore  .readthedocs.yaml  CHANGELOG.md  Makefile  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
docs/: conf.py  index.rst  requirements.txt
docs/base/: index.rst
src/mregpy/: __init__.py
src/mregpy/core/: cli.py  scan.py
src/mregpy/core/cli/: __init__.py  scan.py
tests/: base.py
