[project]
name = "mregpy"
version = "0.0.1"
authors = [
  { name="MrMcScreamyPants", email="noreply@githubusers.com" },
]
description = "A utility library for file regestries."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/mrmcscreamypant/mregpy"
Issues = "https://github.com/mrmcscreamypant/mregpy/issues"